# VibeTemplates

./: .gitignore  AGENTS.md  README.md
.agents/skills/karpathy-guidelines/: SKILL.md
skills/derive-project-template/: SKILL.md
skills/derive-project-template/assets/templates/: AGENTS.md.tpl  README.md.tpl
skills/derive-project-template/assets/templates/docs/agents/: agent-development-context.md.tpl
skills/derive-project-template/assets/templates/docs/ai-guidelines/: AI-COLLABORATION.md  COLLABORATION-PROTOCOL.md
skills/derive-project-template/assets/templates/docs/architecture/: codebase-map.md.tpl
skills/derive-project-template/assets/templates/docs/engineering-guidelines/: DESIGN-PRINCIPLES.md
skills/derive-project-template/assets/templates/scripts/: check-agent-doc-format.py  check-codebase-map-format.py
skills/derive-project-template/assets/tools/vscode/: markdown-chinese-preview-translator-0.0.1.vsix
skills/derive-project-template/scripts/: audit_project_docs.py  init_project_docs.py  validate_project_docs.py
tests/: test_project_template_scripts.py
tools/code-readability-mcp/: README.md  pyproject.toml
tools/code-readability-mcp/src/code_readability_mcp/: __init__.py  language_analyzer_dispatch.py  mcp_server.py  python_readability_analyzer.py  readability_result_models.py  readability_rule_registry.py  readability_target_discovery.py
tools/code-readability-mcp/tests/: conftest.py  test_code_readability_self_check.py  test_python_readability_analyzer.py  test_readability_rule_registry.py  test_readability_target_discovery.py
